Micky: Fixed white-space wrap issues

--- a/web/src/components/smartComponents/MyTeamLists/MyTeamList/MyTeamList.module.css
+++ b/web/src/components/smartComponents/MyTeamLists/MyTeamList/MyTeamList.module.css
@@ -1,11 +1,11 @@
 .default {
   width: 100%;
   border-radius: 20px;
-  -webkit-box-shadow: 0px 4px 15px -7px rgba(0,0,0,0.66);
-  -moz-box-shadow: 0px 4px 15px -7px rgba(0,0,0,0.66);
-  box-shadow: 0px 4px 15px -7px rgba(0,0,0,0.66);
+  -webkit-box-shadow: 0px 4px 15px -7px rgba(0, 0, 0, 0.66);
+  -moz-box-shadow: 0px 4px 15px -7px rgba(0, 0, 0, 0.66);
+  box-shadow: 0px 4px 15px -7px rgba(0, 0, 0, 0.66);
   overflow: hidden;
-  background:white;
+  background: white;
   margin-bottom: 5%;
 }
 /* team */
@@ -50,6 +50,7 @@
 .team .teamEvent {
   text-align: start;
   margin-right: 3%;
+  white-space: nowrap;
 }
 
 .team .teamStatus {
